docs: add Zeppelin building steps